--- a/css/login.css
+++ b/css/login.css
@@ -61,7 +61,7 @@ fieldset {
     padding: 8px;
     color: white;
     font-weight: bold;
-    border: 1px lightgrey;
+    border: 1px solid lightgrey;
     background-color: #0fb784;
 }
 
@@ -76,5 +76,5 @@ fieldset {
     /* See the example at: https://developer.mozilla.org/en-US/docs/Web/CSS/calc */
     /* HINT: Calculate based on the padding of the `.btn` class */
     /* HINT: Examples are available at: https://glitch.com/~input-button-width */
-    width: calc(100% - 8px);
+    width: calc(100% - 4px);
 }
