--- a/css/twitter.css
+++ b/css/twitter.css
@@ -5,9 +5,11 @@
     --light-bg: #FFF;
     --separator-color: #DDD;
 }
+
 * {
     box-sizing: border-box;
 }
+
 body, html {
     background-color: var(--main-bg);
     height: 100%;
@@ -16,34 +18,111 @@ body, html {
     padding: 0;
     font-family: Arial, Ubuntu, sans-serif;
 }
+
 header {
     background-image: url("https://loremflickr.com/1200/300");
     background-size: cover;
     min-height: 300px;
     padding-top: 275px;
 }
+
 a {
     color: var(--link-color);
 }
+
 .top-nav {
     background: var(--light-bg);
+    position: fixed;
+    z-index: 1000;
+    width: 100%;
 }
+
 .nav {
     list-style-type: none;
     padding: 0;
     margin: 0;
 }
+
+.nav-item {
+    display: inline-block;
+    padding: 1.5em;
+}
+
 .nav-link {
     color: var(--main-link-color);
     font-weight: bold;
     text-decoration: none;
 }
+
 .nav-link:hover {
     color: var(--link-color);
 }
+
 .profile {
     background: var(--light-bg);
+    height: 80px;
 }
+
+.profile-image {
+    position: absolute;
+    top: 250px;
+}
+
+.profile-form {
+    float: right;
+    line-height: 80px;
+}
+
+.container {
+    margin-top: 2em;
+}
+
+.profile-details {
+    width: calc(25% - 1em);
+    float: left;
+    margin: 0em 0.5em;
+}
+
+.timeline {
+    width: calc(50% - 1em);
+    float: left;
+    margin: 0em 0.5em;
+}
+
+.who-to-follow {
+    width: calc(25% - 1em);
+    float: left;
+    margin: 0em 0.5em;
+}
+
+.media {
+    width: 100%;
+    background-color: var(--light-bg);
+    border-bottom: 1px solid var(--separator-color);
+    padding: .5em;
+    overflow: auto;
+}
+
+.media-image {
+    width: 50px;
+    margin-top: 1.33em;
+    float: left;
+}
+
+.media-body {
+    float: left;
+    width: calc(100% - 50px);
+}
+
+.profile-items {
+    padding: 0;
+    list-style-type: none;
+}
+
+.profile-entry {
+    margin: .5em;
+}
+
 .btn {
     border: 1px solid var(--main-link-color);
     color: var(--main-link-color);
@@ -52,17 +131,21 @@ a {
     padding: 8px;
     border-radius: 5px;
 }
+
 .btn-large {
     font-size: 1.3em;
     padding: 10px;
 }
+
 .img-circle {
     border-radius: 100%;
     border: 4px solid var(--light-bg);
 }
+
 .text-right {
     text-align: right;
 }
+
 .text-muted {
     color: var(--main-link-color);
 }
