--- a/css/twitter.css
+++ b/css/twitter.css
@@ -20,7 +20,7 @@ body, html {
 }
 
 header {
-    background-image: url("https://loremflickr.com/1200/300");
+    background-image: url("../img/337-1200x300.jpg");
     background-size: cover;
     min-height: 300px;
     padding-top: 275px;
