--- a/css/streaming-player-ui.css
+++ b/css/streaming-player-ui.css
@@ -61,7 +61,7 @@ header a {
 
 header ul li:nth-of-type(2) {
     /* TODO: uncomment the next line and add a value which causes Flexbox to automatically fill in extra space on it's left side */
-    margin-left: 50%;
+    margin-left: auto;
     border-right: 1px solid white;
 }
 
